--- a/exercise11/webapp/i18n/i18n.properties
+++ b/exercise11/webapp/i18n/i18n.properties
@@ -8,4 +8,4 @@ appTitle=Use Element Binding & Association
 #YDES: Application description
 appDescription=항공사와 항공편 조회
 #XTIT: Main view title
-title=Use Element Binding &amp; Association
+title=Use Element Binding & Association
