--- a/homework1/webapp/i18n/i18n.properties
+++ b/homework1/webapp/i18n/i18n.properties
@@ -8,4 +8,4 @@ appTitle=UI5 – Table & Fragment 활용하기
 #YDES: Application description
 appDescription=SAPUI5를 이용한 테이블 리스트 구현
 #XTIT: Main view title
-title=UI5 – Table &amp; Fragment 활용하기
+title=UI5 – Table & Fragment 활용하기
