--- a/hw1review/webapp/i18n/i18n.properties
+++ b/hw1review/webapp/i18n/i18n.properties
@@ -8,4 +8,4 @@ appTitle=UI5- Table & Fragment 활용하기
 #YDES: Application description
 appDescription=An SAP Fiori application.
 #XTIT: Main view title
-title=UI5- Table &amp; Fragment 활용하기
+title=UI5- Table & Fragment 활용하기
