i18n 수정 및 i18n_en 생성

--- a/hw1review/webapp/i18n/i18n_en.properties
+++ b/hw1review/webapp/i18n/i18n_en.properties
@@ -10,14 +10,14 @@ appDescription=An SAP Fiori application.
 #XTIT: Main view title
 title=UI5- Table & Fragment 활용하기
 
-labelCarrid=항공사
+labelCarrid=Airline ID
 
-labelConnid=항공편번호
+labelConnid=Airline Name
 
-labelCountry=출발국가
+labelCountry=Departure Country
 
-labelCityfrom=출발도시
+labelCityfrom=Departure City
 
-labelCountryto=도착국가
+labelCountryto=Arrival Country
 
-labelCityto=도착도시
+labelCityto=Arrival City
