i18n_ko 생성 및 출발국가 key명 수정

--- a/hw1review/webapp/i18n/i18n_en.properties
+++ b/hw1review/webapp/i18n/i18n_en.properties
@@ -14,7 +14,7 @@ labelCarrid=Airline ID
 
 labelConnid=Airline Name
 
-labelCountry=Departure Country
+labelCountryfr=Departure Country
 
 labelCityfrom=Departure City
 
