--- a/odatamodel/webapp/i18n/i18n.properties
+++ b/odatamodel/webapp/i18n/i18n.properties
@@ -9,3 +9,11 @@ appTitle=OData 모델의 CRUD
 appDescription=An SAP Fiori application.
 #XTIT: Main view title
 title=OData 모델의 CRUD
+
+labelCarrid=항공사id
+
+labelCarrname=항공사명
+
+labelCurrcode=통화코드
+
+labelUrl=웹페이지 주소
