--- a/odatamodel/webapp/i18n/i18n.properties
+++ b/odatamodel/webapp/i18n/i18n.properties
@@ -10,7 +10,7 @@ appDescription=An SAP Fiori application.
 #XTIT: Main view title
 title=OData 모델의 CRUD
 
-labelCarrid=항공사id
+labelCarrid=항공사ID
 
 labelCarrname=항공사명
 
