table 생성 및 데이터 넣기

--- a/odatamodel_multi_delete/webapp/i18n/i18n.properties
+++ b/odatamodel_multi_delete/webapp/i18n/i18n.properties
@@ -9,3 +9,11 @@ appTitle=다중 데이터 삭제
 appDescription=An SAP Fiori application.
 #XTIT: Main view title
 title=다중 데이터 삭제
+
+labelCarrid=항공사
+
+labelCarrname=항공사명
+
+labelCurrcode=통화코드
+
+labelUrl=웹페이지
