--- a/odatamodel_multi_update/webapp/i18n/i18n.properties
+++ b/odatamodel_multi_update/webapp/i18n/i18n.properties
@@ -9,3 +9,7 @@ appTitle=OData 모델을 통해 다중 데이터 변경
 appDescription=An SAP Fiori application.
 #XTIT: Main view title
 title=OData 모델을 통해 다중 데이터 변경
+
+labelCarrid=항공사ID
+
+labelCarrname=항공사명
