테이블 띄우고 비행일자 포멧 수정

--- a/ex2review/webapp/i18n/i18n.properties
+++ b/ex2review/webapp/i18n/i18n.properties
@@ -9,3 +9,12 @@ appTitle=실습평가 2번 문제리뷰 E21
 appDescription=An SAP Fiori application.
 #XTIT: Main view title
 title=실습평가 2번 문제리뷰 E21
+
+labelCarrid=항공사ID
+labelConnid=항공편No
+labelFldate=비행일자
+labelPlanetype=비행기
+labelSeatsmax=최대좌석수
+labelSeatsocc=예약좌석수
+labelSeatsfre=잔여좌석수
+labelPaymentsum=총예약금액
