--- a/ex2review/webapp/i18n/i18n.properties
+++ b/ex2review/webapp/i18n/i18n.properties
@@ -13,6 +13,7 @@ title=실습평가 2번 문제리뷰 E21
 labelCarrid=항공사ID
 labelConnid=항공편No
 labelFldate=비행일자
+labelPrice=운임금액
 labelPlanetype=비행기
 labelSeatsmax=최대좌석수
 labelSeatsocc=예약좌석수
