팝업창 띄우고 내용 채우기

--- a/ex2review/webapp/i18n/i18n.properties
+++ b/ex2review/webapp/i18n/i18n.properties
@@ -19,3 +19,11 @@ labelSeatsmax=최대좌석수
 labelSeatsocc=예약좌석수
 labelSeatsfre=잔여좌석수
 labelPaymentsum=총예약금액
+
+labelFltime=비행시간
+labelDeparture=출발지
+labelArrival=도착지
+labelDeptime=출발시간
+labelArrtime=도착시간
+labelDistance=비행거리
+labelPeriod=비행기간
