팝업창 내용 채우기

--- a/ex3review/webapp/i18n/i18n.properties
+++ b/ex3review/webapp/i18n/i18n.properties
@@ -9,3 +9,10 @@ appTitle=실습평가 3번 문제리뷰 E21
 appDescription=An SAP Fiori application.
 #XTIT: Main view title
 title=실습평가 3번 문제리뷰 E21
+
+labelCarrid=항공사ID
+labelConnid=항공편No
+labelCityfrom=출발국가(도시)
+labelCityto=도착국가(도시)
+labelArrtime=비행시간
+labelDistance=비행거리
