--- a/ex3review/webapp/i18n/i18n.properties
+++ b/ex3review/webapp/i18n/i18n.properties
@@ -12,7 +12,13 @@ title=실습평가 3번 문제리뷰 E21
 
 labelCarrid=항공사ID
 labelConnid=항공편No
-labelCityfrom=출발국가(도시)
-labelCityto=도착국가(도시)
-labelArrtime=비행시간
+label Countryfr=출발국가
+labelCityfrom=출발도시
+labelAirpfrom=출발공항
+labelCountryto=도착국가
+labelCityto=도착도시
+labelAirpto=도착공항
+labelTimeDistance=시간 및 거리
+labelDeptime=출발시간
+labelArrtime=도착시간
 labelDistance=비행거리
