디테일 화면 수정전

--- a/project2/webapp/i18n/i18n.properties
+++ b/project2/webapp/i18n/i18n.properties
@@ -8,4 +8,10 @@ appTitle=App Title
 #YDES: Application description
 appDescription=An SAP Fiori application.
 #XTIT: Main view title
-title=App Title
+title=계정별 금액
+
+labelBukrs=회사코드
+labelSaknr=계정과목
+labelShkzg=차/대 (S/H)
+labeldDmbtr=금액
+labeldHwaer=통화
