--- a/project2/webapp/i18n/i18n.properties
+++ b/project2/webapp/i18n/i18n.properties
@@ -3,7 +3,7 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=App Title
+appTitle=계정별 금액
 
 #YDES: Application description
 appDescription=An SAP Fiori application.
@@ -14,4 +14,3 @@ labelBukrs=회사코드
 labelSaknr=계정과목
 labelShkzg=차/대 (S/H)
 labeldDmbtr=금액
-labeldHwaer=통화
