퍼센트 수정전

--- a/stacked_bar/webapp/i18n/i18n.properties
+++ b/stacked_bar/webapp/i18n/i18n.properties
@@ -9,3 +9,11 @@ appTitle=감가상각 차트
 appDescription=An SAP Fiori application.
 #XTIT: Main view title
 title=감가상각 차트
+labelAnln1=고정자산번호
+labelAnlhtxt=고정자산명
+labelAmount=기초가액
+labelRemamt=잔여금액
+labelDepmethod=상각방법
+labelFixra=정률
+labelAcqdate=취득일
+labelNdjar=내용연수
