--- a/stacked_bar/webapp/i18n/i18n.properties
+++ b/stacked_bar/webapp/i18n/i18n.properties
@@ -3,7 +3,7 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=감가상각 차트
+appTitle=[FI]감가상각 차트
 
 #YDES: Application description
 appDescription=An SAP Fiori application.
