검색필드 추가

--- a/stacked_bar/webapp/i18n/i18n.properties
+++ b/stacked_bar/webapp/i18n/i18n.properties
@@ -13,6 +13,7 @@ labelAnln1=고정자산번호
 labelAnlhtxt=고정자산명
 labelAmount=기초가액
 labelRemamt=잔여금액
+labelSumamt=누적상각비
 labelDepmethod=상각방법
 labelFixra=정률
 labelAcqdate=취득일
